# grad-project

./: .gitignore  RATE_LIMITING.md  README.md  checkpoints.sqlite-shm  dump.rdb  main.py  manage.py  pyproject.toml  start_services.ps1  test_auth_api.py  test_extended_auth_api.py  test_models.py
grad-project-django/: .gitignore  pyproject.toml
grad-project-django/ai_workflow/src/graphs/: graph_builders.py
grad-project-django/ai_workflow/src/language_models/: prompts.py
grad-project-django/ai_workflow/src/schemas/: output_structures.py  (+1 more)
grad-project-django/ai_workflow/tests/: test_dataclass_quality.py
grad-project-django/authentication/: tasks.py  utils.py
grad-project-django/authentication/serializers/: user_serializers.py
grad-project-django/authentication/signals/: user_register.py
grad-project-django/authentication/views/: user_views.py
grad-project-django/books/urls/: __init__.py  v1.py
grad-project-django/books/views/: book_list_views.py
grad-project-django/chunked_uploads/urls/: v1.py
grad-project-django/chunked_uploads/views/: chunked_uploads_views.py
grad-project-django/chunks/urls/: v1.py
grad-project-django/customer/graduation_backend/: asgi.py  wsgi.py
grad-project-django/customer/serializers/: customer_serializer.py
grad-project-django/myadmin/models/: admin_model.py
grad-project-django/profiles/models/: __init__.py  profile_models.py
grad-project-django/profiles/urls/: __init__.py
grad-project-django/store/serializers/: store_list_serializer.py  store_serializer.py
grad-project-django/store/views/: store_delete_views.py
(+239 files in other folders)
